# galgame-mcp-engine

./: .gitignore  README.md  prompt.md  pyproject.toml
skill/: galgame_world_engine.md
src/galgame_engine/: engine.py  response_builder.py  server.py  state_manager.py
